--- a/ZSZ.Admin.Web/css/VlidForm.css
+++ b/ZSZ.Admin.Web/css/VlidForm.css
@@ -11,19 +11,19 @@
 .Validform_right {
     color: #71b83d;
     padding-left: 20px;
-    background: url(../images/right.png) no-repeat left center;
+    background: url(../images/icon_right_s.png) no-repeat left center;
 }
 
 .Validform_wrong {
     color: red;
     padding-left: 20px;
     white-space: nowrap;
-    background: url(../images/error.png) no-repeat left center;
+    background: url(../images/icon_error_s.png) no-repeat left center;
 }
 
 .Validform_loading {
     padding-left: 20px;
-    background: url(../images/onLoad.gif) no-repeat left center;
+    background: url(../images//loading.gif) no-repeat left center;
 }
 
 .Validform_error {
